Working on the main page!

--- a/index.html
+++ b/index.html
@@ -1,13 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <h1 class="header__farm-name">
+        <img class="header__farm-name__logo" src="./logo.png" alt="logo" />
+        OurBerries
+      </h1>
+      <nav class="header__nav-links">
+        <ul class="header__nav__list-items">
+          <li class="header__list-item list-iitem">Our Products</li>
+
+          <li class="header__list-item list-iitem">About us</li>
+          <li class="header__list-item list-iitem">Pick up berries!</li>
+        </ul>
+      </nav>
+    </header>
+    <section class="main-section">
+      <div class="main-section__text">
+        <h2 class="main-section__text__title">
+          Pick your own organic, fresh healthy berries!
+        </h2>
+        <p class="main-section__text__some-text">
+          Customers enjoy picking their own crops for the fun experience as well
+          as the reward of quality and freshness. It’s a great activity for the
+          family or the perfect way to connect back to nature. Enjoy fresh air
+          and some of the best produce in Kosovo!
+        </p>
+      </div>
+      <img
+        class="main-section__image"
+        src="/images/background-berries-berry-blackberries-87818.jpeg"
+        alt="berries"
+      />
+    </section>
+    <section class="our-products">
+      <h3 class="our-products__title">Our Products</h3>
+      <ul class="our-products__list-items">
+        <li class="our-products__strawberries list-item">
+          <img
+            class="list-item__picture"
+            src="./images/strawberry.png"
+            alt="strawberry"
+          />
+          <h4 class="our-products__list-items__title title">Strawberries</h4>
+        </li>
+        <li class="our-products__blueberries list-item">
+          <img
+            class="list-item__picture"
+            src="./images/blueberry.png"
+            alt="blueberry"
+          />
+          <h4 class="our-products__list-items__title title">Blueberries</h4>
+        </li>
+        <li class="our-products__cranberries list-item">
+          <img
+            class="list-item__picture"
+            src="./images/raspberry.png"
+            alt="raspberry"
+          />
+          <h4 class="our-products__list-items__title title">Cranberries</h4>
+        </li>
+        <li class="our-products__blackberries list-item">
+          <img
+            class="list-item__picture"
+            src="./images/blackberry.png"
+            alt="blackberry"
+          />
+          <h4 class="our-products__list-items__title title">Blackberries</h4>
+        </li>
+      </ul>
+    </section>
+    <section class="about-the-products">
+      <div class="about-the-products__first-berry">
+        <div class="about-the-products__first-berry__picture">
+          pic should be here
+        </div>
+        <div class="about-the-products__first-berry__info">
+          Some text should be here
+        </div>
+      </div>
+      <div class="about-the-products__second-berry">
+        <div class="about-the-products__second-berry__picture">
+          pic should be here
+        </div>
+        <div class="about-the-products__second-berry__info">
+          Some text should be here
+        </div>
+      </div>
+      <div class="about-the-products__third-berry">
+        <div class="about-the-products__third-berry__picture">
+          pic should be here
+        </div>
+        <div class="about-the-products__third-berry__info">
+          Some text should be here
+        </div>
+      </div>
+    </section>
+    <section class="testimonials">some testimonials...</section>
+    <footer class="footer">footer items</footer>
+  </body>
 </html>
