some more content in main page...

--- a/index.html
+++ b/index.html
@@ -78,32 +78,118 @@
       </ul>
     </section>
     <section class="about-the-products">
-      <div class="about-the-products__first-berry">
-        <div class="about-the-products__first-berry__picture">
-          pic should be here
+      <div class="about-the-products__strawberry about-berry">
+        <div
+          class="about-the-products__strawberry__picture about-berry__picture"
+        >
+          <img
+            class="about-berry__picture"
+            src="./images/strawberry-farm.jpg"
+            alt="strawberry in a farm."
+          />
         </div>
-        <div class="about-the-products__first-berry__info">
-          Some text should be here
+        <div class="about-the-products__strawberry__info about-berry__info">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+          recusandae dolores illo. Consequuntur facere doloremque harum autem
+          fugit delectus sapiente rem exercitationem mollitia maiores, accusamus
+          similique, vel, doloribus voluptates sint.
         </div>
       </div>
-      <div class="about-the-products__second-berry">
-        <div class="about-the-products__second-berry__picture">
-          pic should be here
+      <div class="about-the-products__blueberry about-berry">
+        <div class="about-the-products__blueberry__info about-berry__info">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos
+          recusandae sed eius ab officiis repudiandae molestiae ex cupiditate,
+          nisi aperiam repellendus corporis earum, dolorem blanditiis quasi
+          eaque tempore quae! Voluptas.
         </div>
-        <div class="about-the-products__second-berry__info">
-          Some text should be here
+        <div
+          class="about-the-products__blueberry__picture about-berry__picture"
+        >
+          <img
+            class="about-berry__picture"
+            src="./images/blueberry-farm.webp"
+            alt="Blueberry in a farm"
+          />
         </div>
       </div>
-      <div class="about-the-products__third-berry">
-        <div class="about-the-products__third-berry__picture">
-          pic should be here
+      <div class="about-the-products__cranberry about-berry">
+        <div
+          class="about-the-products__cranberry__picture about-berry__picture"
+        >
+          <img
+            class="about-berry__picture"
+            src="./images/raspberry-farm.jpg"
+            alt="raspberry in a farm"
+          />
         </div>
-        <div class="about-the-products__third-berry__info">
-          Some text should be here
+        <div class="about-the-products__cranberry__info about-berry__info">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolorem,
+          earum eveniet debitis velit qui quo corrupti ad dolore aliquid
+          laboriosam tempore modi nemo reprehenderit consequatur sapiente amet
+          repellendus obcaecati.
         </div>
       </div>
     </section>
-    <section class="testimonials">some testimonials...</section>
-    <footer class="footer">footer items</footer>
+    <section class="testimonials">
+      <div class="testimonial-item">
+        <img class="testimonial__picture" src="#" alt="testimonial picture" />
+        <h4 class="testimonial__name">Elona Kajtazi</h4>
+        <p class="testimonial__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
+          laudantium maxime tenetur quis eveniet culpa incidunt voluptatum. Quam
+          aliquid repellat sunt eos explicabo provident sequi voluptatum magnam.
+          Perspiciatis, eius ad!
+        </p>
+      </div>
+      <div class="testimonial-item">
+        <img class="testimonial__picture" src="#" alt="testimonial picture" />
+        <h4 class="testimonial__name">Elona Kajtazi</h4>
+        <p class="testimonial__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
+          laudantium maxime tenetur quis eveniet culpa incidunt voluptatum. Quam
+          aliquid repellat sunt eos explicabo provident sequi voluptatum magnam.
+          Perspiciatis, eius ad!
+        </p>
+      </div>
+      <div class="testimonial-item">
+        <img class="testimonial__picture" src="#" alt="testimonial picture" />
+        <h4 class="testimonial__name">Elona Kajtazi</h4>
+        <p class="testimonial__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
+          laudantium maxime tenetur quis eveniet culpa incidunt voluptatum. Quam
+          aliquid repellat sunt eos explicabo provident sequi voluptatum magnam.
+          Perspiciatis, eius ad!
+        </p>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__container">
+      <div class="footer__farm-location">
+        <div class="footer__farm-location__icon">location icon</div>
+        <div class="footer__farm-location__address">GJAKOVE!!!</div>
+      </div>
+      <ul class="footer__items">
+        <a href="">Info</a>
+        <li class="footer-item"><a href="#">Home</a></li>
+        <li class="footer-item"><a href="#">About us</a></li>
+        <li class="footer-item"><a href="#">Pick up berries</a></li>
+      </ul>
+      <ul class="footer-items">
+        <a href="#"> Our berries</a>
+        <li class="footer-item"><a href="#">Strawberry</a></li>
+        <li class="footer-item"><a href="#"> Blueberry</a></li>
+        <li class="footer-item"><a href="#">Raspberry</a></li>
+        <li class="footer-item"><a href="#">Blackberry</a></li>
+      </ul>
+      <div class="footer__subscribe">
+        <label for="footer__subcribe"
+          >Subscribe for lastest upadets!
+          <input type="email" placeholder="email address" />
+        </label>
+        <button class="subscribe__button">Subscribe</button>
+      </div>
+    </div>
+      <div class="footer__social-media">social media icons</div>
+    </footer>
   </body>
 </html>
