working on the third section

--- a/index.html
+++ b/index.html
@@ -52,14 +52,10 @@
         </div>
       </div>
       <a href="#our-products" class="expand">
-        <span class="material-symbols-outlined">
-          expand_more
-        </span>
+        <span class="material-symbols-outlined"> expand_more </span>
       </a>
-      
     </section>
     <section class="our-products">
-     
       <h3 class="our-products__title">Our Products</h3>
       <ul class="our-products__list-items">
         <li class="our-products__strawberries list-item">
@@ -68,7 +64,9 @@
             src="./images/strawberry.png"
             alt="strawberry"
           />
-          <h4 class="our-products__list-items__title title">Strawberries</h4>
+          <h4 class="our-products__list-items__title title">
+            U-Pick Strawberry
+          </h4>
         </li>
         <li class="our-products__blueberries list-item">
           <img
@@ -76,7 +74,9 @@
             src="./images/blueberry.png"
             alt="blueberry"
           />
-          <h4 class="our-products__list-items__title title">Blueberries</h4>
+          <h4 class="our-products__list-items__title title">
+            U-Pick Blueberry
+          </h4>
         </li>
         <li class="our-products__cranberries list-item">
           <img
@@ -84,7 +84,9 @@
             src="./images/raspberry.png"
             alt="raspberry"
           />
-          <h4 class="our-products__list-items__title title">Cranberries</h4>
+          <h4 class="our-products__list-items__title title">
+            U-Pick Cranberry
+          </h4>
         </li>
         <li class="our-products__blackberries list-item">
           <img
@@ -92,62 +94,90 @@
             src="./images/blackberry.png"
             alt="blackberry"
           />
-          <h4 class="our-products__list-items__title title">Blackberries</h4>
+          <div class="list-item__coming-soon">COMING SOON!</div>
+
+          <h4 class="our-products__list-items__title title">
+            U-Pick Blackberry
+          </h4>
         </li>
       </ul>
     </section>
     <section class="about-the-products">
-      <div class="about-the-products__strawberry about-berry">
-        <div
-          class="about-the-products__strawberry__picture about-berry__picture"
-        >
-          <img
-            class="about-berry__picture"
-            src="./images/strawberry-farm.jpg"
-            alt="strawberry in a farm."
-          />
-        </div>
-        <div class="about-the-products__strawberry__info about-berry__info">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          recusandae dolores illo. Consequuntur facere doloremque harum autem
-          fugit delectus sapiente rem exercitationem mollitia maiores, accusamus
-          similique, vel, doloribus voluptates sint.
-        </div>
+      <div class="about-the-product-item">
+        <img
+          class="about-berry__picture"
+          src="./images/strawberry-farm.jpg"
+          alt="strawberry in a farm."
+        />
       </div>
-      <div class="about-the-products__blueberry about-berry">
-        <div class="about-the-products__blueberry__info about-berry__info">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos
-          recusandae sed eius ab officiis repudiandae molestiae ex cupiditate,
-          nisi aperiam repellendus corporis earum, dolorem blanditiis quasi
-          eaque tempore quae! Voluptas.
-        </div>
-        <div
-          class="about-the-products__blueberry__picture about-berry__picture"
-        >
-          <img
-            class="about-berry__picture"
-            src="./images/blueberry-farm.webp"
-            alt="Blueberry in a farm"
-          />
-        </div>
+      <div class="about-the-product-item text">
+        <h3 class="about-the-product-item__title">U PICK UP STRAWBERRIES OPENING HOURS</h3>
+        <p class="address">Shishman 3, 500 Gjakova.</p>
+        <h4 class="about-the-product-item__subtitle">MID/LATE MAY</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am-5pm</p>
+        <h4 class="about-the-product-item__subtitle">JUNE</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am-5pm</p>
+        <h4 class="about-the-product-item__subtitle">JULY</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am-5pm</p>
+        <h4 class="about-the-product-item__subtitle">EARLY AGUST</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am-5pm.</p>
+        <button class="book-now">Book NOW</button>
       </div>
-      <div class="about-the-products__cranberry about-berry">
-        <div
-          class="about-the-products__cranberry__picture about-berry__picture"
-        >
-          <img
-            class="about-berry__picture"
-            src="./images/raspberry-farm.jpg"
-            alt="raspberry in a farm"
-          />
-        </div>
-        <div class="about-the-products__cranberry__info about-berry__info">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolorem,
-          earum eveniet debitis velit qui quo corrupti ad dolore aliquid
-          laboriosam tempore modi nemo reprehenderit consequatur sapiente amet
-          repellendus obcaecati.
-        </div>
+
+      <div class="about-the-product-item text">
+        <h3 class="title">U PICK UP STRAWBERRIES OPENING HOURS</h3>
+        <p class="address">Shishman 3, 500 Gjakova.</p>
+        <h4 class="title">MID/LATE MAY</h4>
+        <p class="opening-hours">7 days a week</p>
+        <p class="opening-hpurs">9am-5pm</p>
+        <h4 class="title">JUNE</h4>
+        <p class="opening-hours">7 days a week</p>
+        <p class="opening-hpurs">9am-5pm</p>
+        <h4 class="title">JULY</h4>
+        <p class="opening-hours">7 days a week</p>
+        <p class="opening-hpurs">9am-5pm</p>
+        <h4 class="title">EARLY AGUST</h4>
+        <p class="opening-hours">7 days a week</p>
+        <p class="opening-hpurs">9am-5pm.</p>
+        <button class="book-now">Book NOW</button>
       </div>
+      <div class="about-the-product-item">
+        <img
+          class="about-berry__picture"
+          src="./images/blueberry-farm.webp"
+          alt="Blueberry in a farm"
+        />
+      </div>
+
+      <div class="about-the-product-item">
+        <img
+          class="about-berry__picture"
+          src="./images/raspberry-farm.jpg"
+          alt="raspberry in a farm"
+        />
+      </div>
+      <div class="about-the-product-item text">
+        <h3 class="title">U PICK UP STRAWBERRIES OPENING HOURS</h3>
+        <p class="address">Shishman 3, 500 Gjakova.</p>
+        <h4 class="title">MID/LATE MAY</h4>
+        <p class="opening-hours">7 days a week</p>
+        <p class="opening-hpurs">9am-5pm</p>
+        <h4 class="title">JUNE</h4>
+        <p class="opening-hours">7 days a week</p>
+        <p class="opening-hpurs">9am-5pm</p>
+        <h4 class="title">JULY</h4>
+        <p class="opening-hours">7 days a week</p>
+        <p class="opening-hpurs">9am-5pm</p>
+        <h4 class="title">EARLY AGUST</h4>
+        <p class="opening-hours">7 days a week</p>
+        <p class="opening-hpurs">9am-5pm.</p>
+        <button class="book-now">Book NOW</button>
+      </div>
+   
     </section>
     <section class="testimonials">
       <div class="testimonial-item">
