fourth section done!

--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
         />
       </div>
       <div class="about-the-product-item text">
-        <h3 class="about-the-product-item__title">U PICK UP STRAWBERRIES OPENING HOURS</h3>
-        <p class="address">Shishman 3, 500 Gjakova.</p>
+        <h3 class="about-the-product-item__title">
+          U - PICK UP STRAWBERRIES OPENING HOURS
+        </h3>
+        <p class="about-the-product-item__address">
+          Shishman 3, 50,000 Gjakova.
+        </p>
         <h4 class="about-the-product-item__subtitle">MID/LATE MAY</h4>
         <p class="about-the-product-item__opening-hours">7 days a week</p>
         <p class="about-the-product-item__opening-hpurs">9am-5pm</p>
@@ -125,26 +129,31 @@
         <h4 class="about-the-product-item__subtitle">EARLY AGUST</h4>
         <p class="about-the-product-item__opening-hours">7 days a week</p>
         <p class="about-the-product-item__opening-hpurs">9am-5pm.</p>
-        <button class="book-now">Book NOW</button>
+        <button class="book-now">BOOK NOW</button>
       </div>
 
       <div class="about-the-product-item text">
-        <h3 class="title">U PICK UP STRAWBERRIES OPENING HOURS</h3>
-        <p class="address">Shishman 3, 500 Gjakova.</p>
-        <h4 class="title">MID/LATE MAY</h4>
-        <p class="opening-hours">7 days a week</p>
-        <p class="opening-hpurs">9am-5pm</p>
-        <h4 class="title">JUNE</h4>
-        <p class="opening-hours">7 days a week</p>
-        <p class="opening-hpurs">9am-5pm</p>
-        <h4 class="title">JULY</h4>
-        <p class="opening-hours">7 days a week</p>
-        <p class="opening-hpurs">9am-5pm</p>
-        <h4 class="title">EARLY AGUST</h4>
-        <p class="opening-hours">7 days a week</p>
-        <p class="opening-hpurs">9am-5pm.</p>
-        <button class="book-now">Book NOW</button>
+        <h3 class="about-the-product-item__title">
+          U - PICK UP BLUEBERRIES OPENING HOURS
+        </h3>
+        <p class="about-the-product-item__address">
+          Shishman 3, 50,000 Gjakova.
+        </p>
+        <h4 class="about-the-product-item__subtitle">MID/LATE JULY</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <h4 class="about-the-product-item__subtitle">AUGUST</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <h4 class="about-the-product-item__subtitle">SEPTEMBER</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <h4 class="about-the-product-item__subtitle">EARLY OCTOBER</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <button class="book-now">BOOK NOW</button>
       </div>
+
       <div class="about-the-product-item">
         <img
           class="about-berry__picture"
@@ -161,55 +170,73 @@
         />
       </div>
       <div class="about-the-product-item text">
-        <h3 class="title">U PICK UP STRAWBERRIES OPENING HOURS</h3>
-        <p class="address">Shishman 3, 500 Gjakova.</p>
-        <h4 class="title">MID/LATE MAY</h4>
-        <p class="opening-hours">7 days a week</p>
-        <p class="opening-hpurs">9am-5pm</p>
-        <h4 class="title">JUNE</h4>
-        <p class="opening-hours">7 days a week</p>
-        <p class="opening-hpurs">9am-5pm</p>
-        <h4 class="title">JULY</h4>
-        <p class="opening-hours">7 days a week</p>
-        <p class="opening-hpurs">9am-5pm</p>
-        <h4 class="title">EARLY AGUST</h4>
-        <p class="opening-hours">7 days a week</p>
-        <p class="opening-hpurs">9am-5pm.</p>
-        <button class="book-now">Book NOW</button>
+        <h3 class="about-the-product-item__title">
+          U - PICK UP RASPBERRIES OPENING HOURS
+        </h3>
+        <p class="about-the-product-item__address">
+          Shishman 3, 50,000 Gjakova.
+        </p>
+        <h4 class="about-the-product-item__subtitle">MID/LATE JULY</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <h4 class="about-the-product-item__subtitle">AUGUST</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <h4 class="about-the-product-item__subtitle">SEPTEMBER</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <h4 class="about-the-product-item__subtitle">EARLY OCTOBER</h4>
+        <p class="about-the-product-item__opening-hours">7 days a week</p>
+        <p class="about-the-product-item__opening-hpurs">9am - 5pm</p>
+        <button class="book-now">BOOK NOW</button>
       </div>
-   
     </section>
     <section class="testimonials">
+      <h3 class="testimonial-title"> Testimonials</h3>
+      <div class="testimonial-container">
       <div class="testimonial-item">
-        <img class="testimonial__picture" src="#" alt="testimonial picture" />
-        <h4 class="testimonial__name">Elona Kajtazi</h4>
+        <img
+          class="testimonial__picture"
+          src="./images/ema.webp"
+          alt="testimonial picture"
+        />
+        <h4 class="testimonial__name">Ema</h4>
         <p class="testimonial__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
-          laudantium maxime tenetur quis eveniet culpa incidunt voluptatum. Quam
-          aliquid repellat sunt eos explicabo provident sequi voluptatum magnam.
-          Perspiciatis, eius ad!
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi a
+          asperiores perferendis ab praesentium numquam, sit hic nobis
+          laboriosam, nulla molestias. Est et odit placeat ad ex dolore beatae?
+          Sit.
         </p>
       </div>
       <div class="testimonial-item">
-        <img class="testimonial__picture" src="#" alt="testimonial picture" />
-        <h4 class="testimonial__name">Elona Kajtazi</h4>
+        <img
+          class="testimonial__picture"
+          src="./images/art.webp"
+          alt="testimonial picture"
+        />
+        <h4 class="testimonial__name">Art</h4>
         <p class="testimonial__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
-          laudantium maxime tenetur quis eveniet culpa incidunt voluptatum. Quam
-          aliquid repellat sunt eos explicabo provident sequi voluptatum magnam.
-          Perspiciatis, eius ad!
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, fuga?
+          Officia error beatae expedita incidunt omnis temporibus officiis
+          ratione, blanditiis quo minima ipsa fuga aut necessitatibus suscipit
+          pariatur id doloribus!
         </p>
       </div>
       <div class="testimonial-item">
-        <img class="testimonial__picture" src="#" alt="testimonial picture" />
-        <h4 class="testimonial__name">Elona Kajtazi</h4>
+        <img
+          class="testimonial__picture"
+          src="./images/lena.jpeg"
+          alt="testimonial picture"
+        />
+        <h4 class="testimonial__name">Flaka</h4>
         <p class="testimonial__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem,
-          laudantium maxime tenetur quis eveniet culpa incidunt voluptatum. Quam
-          aliquid repellat sunt eos explicabo provident sequi voluptatum magnam.
-          Perspiciatis, eius ad!
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+          placeat quaerat eaque, qui magni at! Odit quae voluptatibus, ipsum
+          dolores perferendis adipisci laudantium et porro, ipsa ratione in
+          officiis illum?
         </p>
       </div>
+    </div>
     </section>
     <footer class="footer">
       <div class="footer__container">
